--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <script src="script.js" defer></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
-       
+        <script src="https://kit.fontawesome.com/a74ead3ab2.js" crossorigin="anonymous"></script>
         <title>Cranbourne South Riding Club</title>
     </head>
     <body>
@@ -60,25 +60,26 @@
             <div class="card">
                 <div class="card-image data"></div>
                 <h2>HRCAV</h2>
-                <p>We are a member of the HRCAV and follow their guidelines for riding gear and activities, our uniform is a royal blue and white or red. Riders can Book and Pay for rallies online via the Event Secretary web application. Rallies offer a mix of group and semi-private sessions in flat, poles, show jumping, cross country or 3 Phase equitation. Groups are of Mixed ability of 2-6 riders depending on the type of activity.</p>
+                <p>We are a member of the HRCAV and follow their guidelines for riding gear and activities, our uniform is a royal blue and white or red. Membership aligns to HRCAV year 1st November through to 31st October. </p>
                 <br>
-                <a href="mailto:randdatasecsolutions@gmail.com" class="gmail">Email</a>
+                <a href="https://eventsecretary.com.au/clubs/csrc/membership/join" class="eventsecretary">Join Now!</a>
+                <a href="https://eventsecretary.com.au/clubs/csrc/membership/renewal" class="eventsecretary">Renew Here!</a>
             </div>
 
             <div class="card">
                 <div class="card-image data"></div>
-                <h2>HRCAV</h2>
-                <p>We are a member of the HRCAV and follow their guidelines for riding gear and activities, our uniform is a royal blue and white or red. Riders can Book and Pay for rallies online via the Event Secretary web application. Rallies offer a mix of group and semi-private sessions in flat, poles, show jumping, cross country or 3 Phase equitation. Groups are of Mixed ability of 2-6 riders depending on the type of activity.</p>
+                <h2>How to Ride!</h2>
+                <p>Riders can Book and Pay for rallies online via the Event Secretary web application. Rallies offer a mix of group and semi-private sessions in flat, poles, show jumping, cross country or 3 Phase equitation. Groups are of Mixed ability of 2-6 riders depending on the type of activity.</p>
                 <br>
-                <a href="mailto:randdatasecsolutions@gmail.com" class="gmail">Email</a>
+                <a href="https://eventsecretary.com.au/clubs/scrc/rallies" class="eventsecretary">Event Secretary Rallies</a>
             </div>
 
             <div class="card">
                 <div class="card-image data"></div>
-                <h2>HRCAV</h2>
-                <p>We are a member of the HRCAV and follow their guidelines for riding gear and activities, our uniform is a royal blue and white or red. Riders can Book and Pay for rallies online via the Event Secretary web application. Rallies offer a mix of group and semi-private sessions in flat, poles, show jumping, cross country or 3 Phase equitation. Groups are of Mixed ability of 2-6 riders depending on the type of activity.</p>
+                <h2>Events</h2>
+                <p>The club hosts a couple of events each year for fun and to raise funds for the club. Members contribute to the running of the club by helping at events, working bees and with setting up and packing away on rally days. If you would like to contact us you can do so below and we hope to see you soon.</p>
                 <br>
-                <a href="mailto:randdatasecsolutions@gmail.com" class="gmail">Email</a>
+                <a href="mailto:cranbournethridingclub@gmail.com" class="gmail"><i class="fa-regular fa-envelope"></i></a>
             </div>
 
         </section>
@@ -89,6 +90,7 @@
                   <h3>This Website was Designed and Coded by</h3>
                   <p>
                     <img src="photos/Logo Final.png">
+                    <p>0402 481 874 <br> For all your Alarm and CCTV needs.</p>
                   </p>
                   <!--
                   <div class="social">
