--- a/gallery.html
+++ b/gallery.html
@@ -103,7 +103,17 @@
       </div>
   
     </div>
-
+<footer>
+        <div class="row primary">
+            <div class="columnabout">
+              <h3>This Website was Designed and Coded by</h3>
+              <p>
+                <img src="photos/Logo Final.png">
+                <p>0402 481 874 <br> For all your Alarm and CCTV needs.</p>
+              </p>
+            </div>
+          </div>
+    </footer>
             <!-- Back to Top -->
             <a href="#" class="back-to-top">
                 <span class="material-symbols-outlined">
