--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                 <a href="https://eventsecretary.com.au/clubs/scrc/rallies" class="eventsecretary">Event Secretary Rallies</a>
             </div>
 
+        
+
             <div class="card">
                 <div class="card-image data"></div>
                 <h2>Events</h2>
@@ -81,7 +83,14 @@
                 <br>
                 <a href="mailto:cranbournethridingclub@gmail.com" class="gmail"><i class="fa-regular fa-envelope"></i></a>
             </div>
-
+            <div class="card">
+                <div class="card-image data"></div>
+                <h2>Contact Us</h2>
+                <p>If you would like to contact us you can do so below and we hope to see you soon!</p>
+                <br>
+                <a href="mailto:cranbournesthridingclub@gmail.com" class="gmail"><i class="fa-regular fa-envelope"></i>Club Email</a>
+                <a href="mailto:cranbournesthridingclub@gmail.com" class="gmail"><i class="fa-regular fa-envelope"></i>Secretary Email</a>
+            </div>
         </section>
 
         <footer>
