--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>Our Club holds two rallies per month, on the 2nd and 4th Sunday of the month. There are also regular mid-week rallies and occasional twilight rallies in the warmer months. Members also post impromptu invitations for social rides. General Information, rallies and events is posted on facebook.</p>
                 <br>  
                  
-                <a href="#" class="fa fa-facebook"></a> 
+                <a href="https://www.facebook.com/groups/192033000842447/" class="fa fa-facebook"></a> 
             </div>
             <div class="card">
                 <div class="card-image alarm"></div>
