--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="card">
                 <div class="card-image cctv"></div>
                 <h2>Rallies</h2>
-                <p>Our Club holds two rallies per month, on the 2nd and 4th Sunday of the month. There are also regular mid-week rallies and occasional twilight rallies in the warmer months. Members also post impromptu invitations for social rides. General Information, rallies and events is posted on facebook.</p>
+                <p>Our Club holds two rallies per month, on the 2nd and 4th Sunday of the month. There are also regular mid-week rallies and occasional twilight rallies in the warmer months. Members also post impromptu invitations for social rides. General information, rallies and events is posted on facebook.</p>
                 <br>  
                  
                 <a href="https://www.facebook.com/groups/192033000842447/" class="fa fa-facebook"></a> 
@@ -60,7 +60,7 @@
             <div class="card">
                 <div class="card-image data"></div>
                 <h2>HRCAV</h2>
-                <p>We are a member of the HRCAV and follow their guidelines for riding gear and activities, our uniform is a royal blue and white or red. Membership aligns to HRCAV year 1st November through to 31st October. </p>
+                <p>We are a member of the HRCAV and follow their guidelines for riding gear and activities, our uniform is a royal blue and white or red. Membership aligns to the HRCAV year 1st of November through to the 31st of October. </p>
                 <br>
                 <a href="https://eventsecretary.com.au/clubs/csrc/membership/join" class="eventsecretary">Join Now!</a>
                 <a href="https://eventsecretary.com.au/clubs/csrc/membership/renewal" class="eventsecretary">Renew Here!</a>
@@ -68,8 +68,8 @@
 
             <div class="card">
                 <div class="card-image data"></div>
-                <h2>How to Ride!</h2>
-                <p>Riders can Book and Pay for rallies online via the Event Secretary web application. Rallies offer a mix of group and semi-private sessions in flat, poles, show jumping, cross country or 3 Phase equitation. Groups are of Mixed ability of 2-6 riders depending on the type of activity.</p>
+                <h2>Ride with us!</h2>
+                <p>Riders can book and pay for rallies online via the Event Secretary web application. Rallies offer a mix of group and semi-private sessions in flat, poles, show jumping, cross country or 3 phase equitation. Groups are of mixed ability of 2-6 riders depending on the type of activity.</p>
                 <br>
                 <a href="https://eventsecretary.com.au/clubs/scrc/rallies" class="eventsecretary">Event Secretary Rallies</a>
             </div>
@@ -79,9 +79,11 @@
             <div class="card">
                 <div class="card-image data"></div>
                 <h2>Events</h2>
-                <p>The club hosts a couple of events each year for fun and to raise funds for the club. Members contribute to the running of the club by helping at events, working bees and with setting up and packing away on rally days. If you would like to contact us you can do so below and we hope to see you soon.</p>
+                <p>The club hosts a couple of events each year for fun and to raise funds for the club. Members contribute to the running of the club by helping at events, working bees and with setting up and packing away on rally days.</p>
                 <br>
+                <!--
                 <a href="mailto:cranbournethridingclub@gmail.com" class="gmail"><i class="fa-regular fa-envelope"></i></a>
+                -->
             </div>
             <div class="card">
                 <div class="card-image data"></div>
