--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image data"></div>
+                <div class="card-image ride"></div>
                 <h2>Ride with us!</h2>
                 <p>Riders can book and pay for rallies online via the Event Secretary web application. Rallies offer a mix of group and semi-private sessions in flat, poles, show jumping, cross country or 3 phase equitation. Groups are of mixed ability of 2-6 riders depending on the type of activity.</p>
                 <br>
@@ -77,7 +77,7 @@
         
 
             <div class="card">
-                <div class="card-image data"></div>
+                <div class="card-image event"></div>
                 <h2>Events</h2>
                 <p>The club hosts a couple of events each year for fun and to raise funds for the club. Members contribute to the running of the club by helping at events, working bees and with setting up and packing away on rally days.</p>
                 <br>
@@ -86,7 +86,7 @@
                 -->
             </div>
             <div class="card">
-                <div class="card-image data"></div>
+                <div class="card-image contact"></div>
                 <h2>Contact Us</h2>
                 <p>If you would like to contact us you can do so below and we hope to see you soon!</p>
                 <br>
