--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 -->
             </div>
             <div class="card">
-                <div class="card-image contact"></div>
+                <div class="card-image contacting"></div>
                 <h2>Contact Us</h2>
                 <p>If you would like to contact us you can do so below and we hope to see you soon!</p>
                 <br>
